# sub-c

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
docs/: grammar.md
subc/: CMakeLists.txt
subc/include/subc/: ast.h  buffer.h  codegen.h  common.h  emitter.h  fstream.h  hashmap.h  lexer.h  main.h  memory.h  parser.h  printer.h  string.h  subc.h  table.h  token.h
subc/source/subc/: ast.c  buffer.c  codegen.c  common.c  emitter.c  fstream.c  hashmap.c  intrinsics.s  lexer.c  main.c  memory.c  parser.c  printer.c  string.c  subc.c  table.c  token.c
tests/: README.md  test01.c  test03.c  test05.c  test06.c  test07.c  test08.c  test09.c  test11.c  test12.c  test15.c  test17.c  test18.c  test19.c  test21.c  test26.c  test27.c  test28.c
tests/c-input/: test00.c  test02.c  test04.c  test10.c  test13.c  test14.c  test16.c  test20.c  test22.c  test23.c  test24.c  test25.c
tests/s-output/: test00.s  test01.s  test02.s  test03.s  test04.s  test05.s  test06.s  test07.s  test08.s  test09.s  test10.s  test11.s  test12.s  test13.s  test14.s  test15.s  test16.s  test17.s  test18.s  test19.s  test20.s  test21.s  test22.s  test23.s  test24.s  test25.s  test26.s  test27.s  test28.s
